[package]
name = "serde_header"
version = "0.1.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "Strongly typed HTTP Header library for Rust, built upon serde"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.20"
http = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false