[package]
name = "serde_header"
version = "0.2.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "Strongly typed HTTP Header library for Rust, built upon serde"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/serde_header"
homepage = "https://github.com/Xuanwo/serde_header"
documentation = "https://docs.rs/serde_header/"

[features]
crate_http = ["http"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.20"
anyhow = "1.0.32"

# used in feature http.
http = { version = "0.2.1", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
